fixed issue with input on smaller screen devices

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -68,6 +68,8 @@ strong {
     opacity: 0.6;
     margin-top: -2px;
     float: left;
+    resize: none;
+    flex: 1;
   }
 
   input {
